--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="box a1">
             <div class="image_1">
                 <div class="text">
-                    <h2>Kona Coffee Beans From Hawaii</h2>
+                    <h2>Sulawesi Toraja Coffee Beans from Indonesia</h2>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="box a2">
             <div class="image_2">
                 <div class="text">
-                    <h2>Blue Mountain Coffee Beans From Jamaica</h2>
+                    <h2>Yirgacheffe Beans From Ethiopia</h2>
                 </div>
             </div>
         </div>
