--- a/products/product3.html
+++ b/products/product3.html
@@ -34,7 +34,7 @@
   </nav>
   <section class="projects">
        <div class="content-wrap divider">
-         <h2>  Blue Mountain Coffee Beans From Jamaica</h2>
+         <h2> Kenyan AA Coffee Beans</h2>
          <!-- Project 1 -->
          <section class="project-item">
            <img src="../images/img3.jpg" alt="">
