--- a/products/product6.html
+++ b/products/product6.html
@@ -42,7 +42,7 @@
            <p>Origin:Ethiopia</p>
            <p>Type: Single origin</p>
            <p>Tasting notes: light body, with complex fruit and floral notes
-Aroma: earthy, with cinnamon and strawberry undertones</p>
+           <p>Aroma: earthy, with cinnamon and strawberry undertones</p>
            <p>Aroma: Funky, pungent, mixed spices and herbal</p>
            <p>Recommended brew styles: Drip and Pour Over</p>
            <a class="btn" href="#">Price: $30</a>
