--- a/products/product7.html
+++ b/products/product7.html
@@ -34,7 +34,7 @@
   </nav>
   <section class="projects">
        <div class="content-wrap divider">
-         <h2>Dark Roast Sumatra Mandheling Beans From Indonesiaa</h2>
+         <h2>Dark Roast Sumatra Mandheling Beans From Indonesia</h2>
          <section class="project-item">
            <img src="../images/img5.jpg" alt="">
            <p>Brand:Volcanica Coffee</p>
