--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </nav>
   <!---image slider --------------------------------------------->
 <section class="slider">
-    <h1>Best Sellers</h1><br>
-    <h2> Touch the images to see'em! </h2>
+    <h1>Best Sellers</h1>
+    <h2>Touch the images to see'em!</h2>
     <div class="imageslider">
         <!-- box 1 -->
         <div class="box a1">
